Update all index xHTML skel (header, footer, etc) for new CSS

--- a/slitaz/index.de.html
+++ b/slitaz/index.de.html
@@ -16,69 +16,51 @@
 
 <!-- Header and quick navigation -->
 <div id="header">
-<div align="right" id="quicknav">
-	<a name="top"></a>
-	<a href="http://www.slitaz.org/">www.slitaz.org</a> |
-	<a href="http://forum.slitaz.org/">forum.slitaz.org</a> |
-	<a href="http://labs.slitaz.org/">labs.slitaz.org</a>
-</div>
 <h1><font color="#3E1220">SliTaz - System doc</font></h1>
+</div>
+
+<div id="quicknav">
+	SliTaz:
+	<a href="http://www.slitaz.org/">Website</a>
+	<a href="http://forum.slitaz.org/">Forum</a>
+	<a href="http://wiki.slitaz.org/">Wiki</a>
+	<a href="http://labs.slitaz.org/">Labs</a>
 </div>
 
 <!-- Content. -->
 <div id="content">
-<div class="content-right"></div>
 
 <h2><font color="#DF8F06">Documentation (de)</font></h2>
 
 <p>
-SliTaz GNU/Linux stable Release wird mit den Dokumentationen
-für die SliTaz-Werkzeuge und den deutschen
-Release Notes veröffentlicht. Dokumentation und diese Seite sind über
-das Openboxenü erreichbar. Bitte konsultieren Sie ebenfalls die
-<a href="http://www.slitaz.org/de/">Deutsche Projektseite</a> für allgemeine
-Informationen über SliTaz. Für die Benutzung des Systems lesen Sie bitte das
-<a href="http://wiki.slitaz.org/doku.php?id=lang:de:manual:manualstart">deutsche
-Handbuch</a>. das Teil des <a href="http://wiki.slitaz.org/">SliTaz Wiki</a> ist.
+SliTaz GNU/Linux stable Release wird mit den Dokumentationen für die 
+SliTaz-Werkzeuge und den deutschen Release Notes veröffentlicht. Dokumentation
+und diese Seite sind über das Openboxenü erreichbar. Bitte konsultieren Sie 
+ebenfalls die <a href="http://www.slitaz.org/de/">Deutsche Projektseite</a> 
+für allgemeine Informationen über SliTaz. Für die Benutzung des Systems lesen
+Sie bitte das deutsche Handbuch. das Teil des 
+<a href="http://wiki.slitaz.org/">SliTaz Wiki</a> ist.
 </p>
-
-<a name="cloud"></a>
-<h3><font color="#6c0023">Tag cloud</font></h3>
-<!-- 10 Cloud tag are available. -->
-<div id="cloud">
-<p>
-	<a href="http://forum.slitaz.org/" class="tag6">Support</a>
-	<a href="http://wiki.slitaz.org/doku.php?id=lang:de:manual:manualstart" class="tag3">Documentation</a>
-	<a href="http://www.slitaz.org/de/" class="tag7">SliTaz GNU/Linux</a>
-	<a href="http://www.slitaz.org/de/about/" class="tag4">About</a>
-	<a href="http://labs.slitaz.org/" class="tag6">Laboratories</a>
-	<a href="http://www.slitaz.org/de/devel/" class="tag5">Development</a>
-	<a href="http://www.slitaz.org/de/packages/" class="tag6">Packages</a>
-	<a href="http://wiki.slitaz.org/" class="tag6">Wiki</a>
-	<a href="http://www.slitaz.org/de/doc/cookbook/" class="tag3">Cookbook</a>
-	<a href="http://labs.slitaz.org/news" class="tag6">Labs News</a>
-	<a href="http://www.slitaz.org/de/mailing-list.html" class="tag5">Mailing list</a>
-	<a href="http://www.slitaz.org/de/artwork/" class="tag4">Artwork</a>
-	<a href="http://www.slitaz.org/de/get/flavors.html" class="tag6">LiveCD flavor</a>
-	<a href="http://boot.slitaz.org/" class="tag8">Web Boot</a>
-</p>
-</div>
 
 <!-- End of content -->
 </div>
 
 <!-- Footer. -->
 <div id="footer">
-	<div class="footer-right"></div>
-	<a href="#top">Top of the page</a>
+	<a href="#top">Top of the page</a> - Languages:
+	<a href="index.de.html">de</a> |
+	<a href="index.en.html">en</a> |
+	<a href="index.fr.html">fr</a> |
+	<a href="index.hu.html">hu</a> |
+	<a href="index.pt.html">pt</a>
 </div>
 
 <div id="copy">
-	Copyright &copy; 2009 <a href="http://www.slitaz.org/">SliTaz</a> -
+	Copyright &copy; 2010 <a href="http://www.slitaz.org/">SliTaz</a> -
 	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
-	Documentation publiées sous
+	Documentation uder
 	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
-	et codée en <a href="http://validator.w3.org/">xHTML 1.0 valide</a>.
+	and valid <a href="http://validator.w3.org/">xHTML 1.0</a>.
 </div>
 
 </body>
