--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -30,7 +30,6 @@
 
 <!-- Content. -->
 <div id="content">
-<div class="content-right"></div>
 
 <h2><font color="#DF8F06">Documentation (en)</font></h2>
 
@@ -135,18 +134,18 @@ or <code>tazusb</code> from the command line. More information can be found on S
 Handbook: <a href="http://www.slitaz.org/en/doc/handbook/liveusb.html"
 	>LiveUSB media</a>
 </p>
+
 <!-- End of content -->
 </div>
 
 <!-- Footer. -->
 <div id="footer">
-	<div class="footer-right"></div>
 	<a href="#top">Top of the page</a> - Languages:
 	<a href="index.de.html">de</a> |
 	<a href="index.en.html">en</a> |
 	<a href="index.fr.html">fr</a> |
 	<a href="index.hu.html">hu</a> |
-	<a href="index.pt.html">pt</a> |
+	<a href="index.pt.html">pt</a>
 </div>
 
 <div id="copy">
