--- a/slitaz/index.fr.html
+++ b/slitaz/index.fr.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
 	<meta name="description" content="slitaz doc system releases notes information cooking" />
 	<meta name="expires" content="never" />
-	<meta name="modified" content="2009-04-16 10:30:00" />
+	<meta name="modified" content="2010-12-30 14:30:00" />
 	<meta name="publisher" content="www.slitaz.org" />
 	<meta name="author" content="Christophe Lincoln"/>
 	<link rel="shortcut icon" href="favicon.ico" />
@@ -16,16 +16,19 @@
 
 <!-- Header and quick navigation -->
 <div id="header">
-<div align="right" id="quicknav">
-	<a name="top"></a>
-	<a href="index.en.html">English</a>
+<h1><font color="#3E1220">SliTaz - Doc du système</font></h1>
 </div>
-<h1><font color="#3E1220">SliTaz - System doc</font></h1>
+
+<div id="quicknav">
+	SliTaz:
+	<a href="http://www.slitaz.org/">Website</a>
+	<a href="http://forum.slitaz.org/">Forum</a>
+	<a href="http://wiki.slitaz.org/">Wiki</a>
+	<a href="http://labs.slitaz.org/">Labs</a>
 </div>
 
 <!-- Content. -->
 <div id="content">
-<div class="content-right"></div>
 
 <h2><font color="#DF8F06">Documentation (fr)</font></h2>
 
@@ -50,50 +53,25 @@ Pour de l'aide vous trouverez un support technique gratuit via la liste
 de discussion ou <a href="http://forum.slitaz.org/">le forum</a> communautaire.
 </p> -->
 
-<a name="cloud"></a>
-<!-- 10 Cloud tag are available. -->
-<div id="cloud">
-<p>
-	<a href="http://forum.slitaz.org/" class="tag6">Support</a>
-	<a href="http://www.slitaz.org/fr/doc/handbook/livecd.html" class="tag9">LiveCD</a>
-	<a href="http://www.slitaz.org/fr/doc/" class="tag3">Documentation</a>
-	<a href="http://www.slitaz.org/fr/" class="tag7">SliTaz GNU/Linux</a>
-	<a href="http://www.slitaz.org/fr/about/" class="tag4">A propos</a>
-	<a href="http://labs.slitaz.org/" class="tag6">Laboratoires</a>
-	<a href="http://www.slitaz.org/fr/doc/handbook/" class="tag6">Handbook</a>
-	<a href="http://www.slitaz.org/fr/doc/handbook/network-config.html" class="tag4">Wifi</a>
-	<a href="http://www.slitaz.org/fr/doc/handbook/packages.html" class="tag6">Gestion des paquets</a>
-	<a href="http://www.slitaz.org/fr/doc/handbook/liveusb.html" class="tag8">LiveUSB</a>
-	<a href="http://www.slitaz.org/fr/devel/" class="tag5">Developpement</a>
-	<a href="http://www.slitaz.org/fr/doc/handbook/enlightenment.html" class="tag3">e17</a>
-	<a href="http://www.slitaz.org/fr/packages/" class="tag6">Paquets</a>
-	<a href="http://wiki.slitaz.org/" class="tag6">Wiki</a>
-	<a href="http://www.slitaz.org/fr/doc/cookbook/" class="tag3">Cookbook</a>
-	<a href="http://labs.slitaz.org/news" class="tag6">Nouvelles des Labs</a>
-	<a href="http://www.slitaz.org/fr/doc/handbook/security.html" class="tag5">Securité</a>
-	<a href="http://www.slitaz.org/fr/doc/handbook/openbox.html" class="tag7">Openbox</a>
-	<a href="http://www.slitaz.org/fr/mailing-list.html" class="tag5">List de discussion</a>
-	<a href="http://www.slitaz.org/fr/artwork/" class="tag4">Artwork</a>
-	<a href="http://www.slitaz.org/fr/get/flavors.html" class="tag6">LiveCD flavor</a>
-	<a href="http://boot.slitaz.org/" class="tag8">Web Boot</a>
-</p>
-</div>
-
 <!-- End of content -->
 </div>
 
 <!-- Footer. -->
 <div id="footer">
-	<div class="footer-right"></div>
-	<a href="#top">Top of the page</a>
+	<a href="#top">Top of the page</a> - Languages:
+	<a href="index.de.html">de</a> |
+	<a href="index.en.html">en</a> |
+	<a href="index.fr.html">fr</a> |
+	<a href="index.hu.html">hu</a> |
+	<a href="index.pt.html">pt</a>
 </div>
 
 <div id="copy">
-	Copyright &copy; 2009 <a href="http://www.slitaz.org/">SliTaz</a> -
+	Copyright &copy; 2010 <a href="http://www.slitaz.org/">SliTaz</a> -
 	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
-	Documentation publiées sous
+	Documentation uder
 	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
-	et codée en <a href="http://validator.w3.org/">xHTML 1.0 valide</a>.
+	and valid <a href="http://validator.w3.org/">xHTML 1.0</a>.
 </div>
 
 </body>
