--- a/slitaz/index.hu.html
+++ b/slitaz/index.hu.html
@@ -15,19 +15,23 @@
 <body bgcolor="#ffffff">
 <!-- Header and quick navigation -->
 <div id="header">
-<div id="quicknav" align="right"> <a name="top"></a> <a
- href="http://www.slitaz.org/">www.slitaz.org</a> | <a
- href="http://forum.slitaz.org/">forum.slitaz.org</a> | <a
- href="http://labs.slitaz.org/">labs.slitaz.org</a>
+<h1><font color="#3e1220">SliTaz - System doc</font></h1>
 </div>
-<h1><font color="#3e1220">SliTaz - System doc (hu)</font></h1>
+
+<div id="quicknav">
+	SliTaz:
+	<a href="http://www.slitaz.org/">Website</a>
+	<a href="http://forum.slitaz.org/">Forum</a>
+	<a href="http://wiki.slitaz.org/">Wiki</a>
+	<a href="http://labs.slitaz.org/">Labs</a>
 </div>
+
 <!-- Content. -->
 <div id="content">
-<div class="content-right"></div>
-<h2><font color="#df8f06">Documentation</font></h2>
 
-<h3><font color="#6c0023">[hu] Megjegyz&eacute;s a kiad&aacute;shoz<br>
+<h2><font color="#df8f06">Documentation (hu)</font></h2>
+
+<h3><font color="#6c0023">Megjegyz&eacute;s a kiad&aacute;shoz<br>
 </font></h3>
 <p>A SliTaz GNU/Linux stabil kiad&aacute;sa a rendszerre
 telep&iacute;tett projekt-eszk&ouml;z&ouml;kkel,
@@ -37,7 +41,7 @@ le&iacute;r&aacute;sok &eacute;s ez az oldal az Openbox men&uuml;n
 kereszt&uuml;l &eacute;rhet&#337;k el. A Slitazzal kapcsolatos
 &aacute;ltal&aacute;nos inform&aacute;ci&oacute;k&eacute;rt
 k&eacute;rj&uuml;k l&aacute;togassa meg a <a
- href="http://www.slitaz.org/hu/">projekt oldalt</a> . A rendszer
+ href="http://www.slitaz.org/">projekt oldalt</a> . A rendszer
 be&aacute;ll&iacute;t&aacute;s&aacute;hoz &eacute;s
 haszn&aacute;lat&aacute;hoz olvassa el a&nbsp; <a
  href="http://www.slitaz.org/hu/doc/handbook/">K&eacute;zik&ouml;nyvet</a>.
@@ -56,55 +60,25 @@ dokument&aacute;ci&oacute; &eacute;s t&aacute;mogat&aacute;s a
 k&ouml;z&ouml;ss&eacute;gi f&oacute;rumban.
 </p>
 
-<a name="cloud"></a>
-<h3><font color="#6c0023">Tag cloud</font></h3>
-<!-- 10 Cloud tag are available. -->
-<div id="cloud">
-<p> <a href="http://forum.slitaz.org/" class="tag6">Support</a> <a
- href="http://www.slitaz.org/en/doc/handbook/livecd.html" class="tag9">LiveCD</a>
-<a href="http://www.slitaz.org/en/doc/" class="tag3">Documentation</a> <a
- href="http://www.slitaz.org/en/" class="tag7">SliTaz GNU/Linux</a> <a
- href="http://www.slitaz.org/en/about/" class="tag4">About</a> <a
- href="http://labs.slitaz.org/" class="tag6">Laboratories</a> <a
- href="http://www.slitaz.org/en/doc/handbook/" class="tag6">Handbook</a>
-<a href="http://www.slitaz.org/en/doc/handbook/network-config.html"
- class="tag4">Wifi</a> <a
- href="http://www.slitaz.org/en/doc/handbook/packages.html" class="tag6">Package
-management</a> <a
- href="http://www.slitaz.org/en/doc/handbook/liveusb.html" class="tag8">LiveUSB</a>
-<a href="http://www.slitaz.org/en/devel/" class="tag5">Development</a> <a
- href="http://www.slitaz.org/en/doc/handbook/enlightenment.html"
- class="tag3">e17</a> <a href="http://www.slitaz.org/en/packages/"
- class="tag6">Packages</a> <a href="http://wiki.slitaz.org/"
- class="tag6">Wiki</a> <a href="http://www.slitaz.org/en/doc/cookbook/"
- class="tag3">Cookbook</a> <a href="http://labs.slitaz.org/news"
- class="tag6">Labs News</a> <a
- href="http://www.slitaz.org/en/doc/handbook/security.html" class="tag5">Security</a>
-<a href="http://www.slitaz.org/en/doc/handbook/openbox.html"
- class="tag7">Openbox</a> <a
- href="http://www.slitaz.org/en/mailing-list.html" class="tag5">Mailing
-list</a> <a href="http://www.slitaz.org/en/artwork/" class="tag4">Artwork</a>
-<a href="http://www.slitaz.org/en/get/flavors.html" class="tag6">LiveCD
-flavor</a> <a href="http://boot.slitaz.org/" class="tag8">Web Boot</a>
-</p>
-
-</div>
-
 <!-- End of content -->
 </div>
 
 <!-- Footer. -->
 <div id="footer">
-	<div class="footer-right"></div>
-	<a href="#top">Top of the page</a>
+	<a href="#top">Top of the page</a> - Languages:
+	<a href="index.de.html">de</a> |
+	<a href="index.en.html">en</a> |
+	<a href="index.fr.html">fr</a> |
+	<a href="index.hu.html">hu</a> |
+	<a href="index.pt.html">pt</a>
 </div>
 
 <div id="copy">
-	Copyright &copy; 2009 <a href="http://www.slitaz.org/">SliTaz</a> -
+	Copyright &copy; 2010 <a href="http://www.slitaz.org/">SliTaz</a> -
 	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
-	Documentation publiées sous
+	Documentation uder
 	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
-	et codée en <a href="http://validator.w3.org/">xHTML 1.0 valide</a>.
+	and valid <a href="http://validator.w3.org/">xHTML 1.0</a>.
 </div>
 
 </body>
