--- a/slitaz/index.pt.html
+++ b/slitaz/index.pt.html
@@ -16,16 +16,19 @@
 
 <!-- Header and quick navigation -->
 <div id="header">
-<div align="right" id="quicknav">
-	<a name="top"></a>
-	<a href="index.en.html">English</a>
-</div>
 <h1><font color="#3E1220">SliTaz - Documentação do Sistema</font></h1>
+</div>
+
+<div id="quicknav">
+	SliTaz:
+	<a href="http://www.slitaz.org/">Website</a>
+	<a href="http://forum.slitaz.org/">Forum</a>
+	<a href="http://wiki.slitaz.org/">Wiki</a>
+	<a href="http://labs.slitaz.org/">Labs</a>
 </div>
 
 <!-- Content. -->
 <div id="content">
-<div class="content-right"></div>
 
 <h2><font color="#DF8F06">Documentação (pt)</font></h2>
 
@@ -38,50 +41,25 @@ informações sobre a versão de testes no website e suporte no
 <a href="http://forum.slitaz.org/">fórum</a> do projeto.
 </p>
 
-<a name="cloud"></a>
-<!-- 10 Cloud tag are available. -->
-<div id="cloud">
-<p>
-	<a href="http://forum.slitaz.org/" class="tag6">Suporte</a>
-	<a href="http://www.slitaz.org/pt/doc/handbook/livecd.html" class="tag9">LiveCD</a>
-	<a href="http://www.slitaz.org/pt/doc/" class="tag3">Documentação</a>
-	<a href="http://www.slitaz.org/pt/" class="tag7">SliTaz GNU/Linux</a>
-	<a href="http://www.slitaz.org/pt/about/" class="tag4">Sobre</a>
-	<a href="http://labs.slitaz.org/" class="tag6">Labs</a>
-	<a href="http://www.slitaz.org/pt/doc/handbook/" class="tag6">Manual</a>
-	<a href="http://www.slitaz.org/pt/doc/handbook/network-config.html" class="tag4">Wifi</a>
-	<a href="http://www.slitaz.org/pt/doc/handbook/packages.html" class="tag6">Gerenciador de Pacotes</a>
-	<a href="http://www.slitaz.org/pt/doc/handbook/liveusb.html" class="tag8">LiveUSB</a>
-	<a href="http://www.slitaz.org/pt/devel/" class="tag5">Desenvolvimento</a>
-	<a href="http://www.slitaz.org/pt/doc/handbook/enlightenment.html" class="tag3">e17</a>
-	<a href="http://www.slitaz.org/pt/packages/" class="tag6">Pacotes</a>
-	<a href="http://wiki.slitaz.org/" class="tag6">Wiki</a>
-	<a href="http://www.slitaz.org/pt/doc/cookbook/" class="tag3">Livro de Receitas</a>
-	<a href="http://labs.slitaz.org/news" class="tag6">Notícias do Labs</a>
-	<a href="http://www.slitaz.org/pt/doc/handbook/security.html" class="tag5">Segurança</a>
-	<a href="http://www.slitaz.org/pt/doc/handbook/openbox.html" class="tag7">Openbox</a>
-	<a href="http://www.slitaz.org/pt/mailing-list.html" class="tag5">Lista de Discussão</a>
-	<a href="http://www.slitaz.org/pt/artwork/" class="tag4">Arte</a>
-	<a href="http://www.slitaz.org/pt/get/flavors.html" class="tag6">Variantes do LiveCD</a>
-	<a href="http://boot.slitaz.org/" class="tag8">Boot via Web</a>
-</p>
-</div>
-
 <!-- End of content -->
 </div>
 
 <!-- Footer. -->
 <div id="footer">
-	<div class="footer-right"></div>
-	<a href="#top">Topo da Página</a>
+	<a href="#top">Top of the page</a> - Languages:
+	<a href="index.de.html">de</a> |
+	<a href="index.en.html">en</a> |
+	<a href="index.fr.html">fr</a> |
+	<a href="index.hu.html">hu</a> |
+	<a href="index.pt.html">pt</a>
 </div>
 
 <div id="copy">
-	Copyright &copy; 2009 <a href="http://www.slitaz.org/">SliTaz</a> -
+	Copyright &copy; 2010 <a href="http://www.slitaz.org/">SliTaz</a> -
 	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
-	Documentation publiées sous
+	Documentation uder
 	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
-	et codée en <a href="http://validator.w3.org/">xHTML 1.0 valide</a>.
+	and valid <a href="http://validator.w3.org/">xHTML 1.0</a>.
 </div>
 
 </body>
