--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -34,7 +34,7 @@
 <h2><font color="#DF8F06">Documentation (en)</font></h2>
 
 <p>
-The Cooking version doesn't provide Release Notes, any changes are announced
+The Cooking version doesn't provide any Release Notes, major changes are announced
 on the web site and the <a href="http://labs.slitaz.org/">Labs</a> provide
 fresh news about the project's activity. Like the stable version, you will 
 find <a href="http://www.slitaz.org/en/doc/">documentation</a> on the web 
@@ -58,18 +58,18 @@ community <a href="http://forum.slitaz.org/#idx2">Forum</a>.
 <h2><font color="#DF8F06">Getting started</font></h2>
 
 <a name="network"></a>
-<h3>Network connection</h3>
+<h3>Network connections</h3>
 <p>
-Click on the "Network Status Monitor" then "Configure" and the network 
-manager (netbox) should come up. You can go to the "DHCP" tab and click
-"Start", and Slitaz will send a DHCP request to the local router. You may
-also setup static IP, PPPoE, PPP, VPN and more through their respective tabs.
-To configure a wireless connection you can use SliTaz wifibox by clicking
-"Wireless Manager" in the Network Manager or from the "System Tools" menu 
-then "Wireless networks connections".
+Click on the "Network Status Monitor" at the bottom right of the screen, 
+"Configure" and then the network manager (netbox) should come up. You can 
+go to the "DHCP" tab and click "Start", and Slitaz will send a DHCP request 
+to the local router. You may also setup a static IP, PPPoE, PPP, VPN and 
+more using their respective tabs. To configure a wireless connection you 
+can use SliTaz wifibox by clicking "Wireless Manager" in the Network Manager 
+or by using the "System Tools" menu entry -> "Wireless networks connections".
 </p>
 <p>
-Detailed information can be find in the Handbook: 
+More detailed information can be found in the Handbook: 
 <a href="http://www.slitaz.org/en/doc/handbook/network-config.html"
 	>Network configuration</a>
 </p>
@@ -77,27 +77,27 @@ Detailed information can be find in the Handbook:
 <a name="apps"></a>
 <h3>Applications</h3>
 <p>
-To have a list of graphical applications you can use the SliTaz menu button 
+To have a list of all graphical applications you can use the SliTaz menu button 
 at the bottom left of the screen. To have a list of command line tools, you
-can open a termnal an double press on the tabulation button. And to have
+can open a terminal and double press on the tabulation button. And to have
 a list of all installed packages you can use the package manager user interface
-from the panel icon or from the "System Tools" menu. To install some new packages
-you must have a network connection, a DVD of packages or a USB storage device with
-downloaded packages from an other machine.
+using the panel icon or from the "System Tools" menu. To install any new packages
+you must have a network connection, the DVD of packages or an USB 
+storage device with downloaded packages from another machine.
 </p>
 
 <a name="office"></a>
 <h3>Office suite</h3>
 <p>
-SliTaz packages database provide some light weight applications to make office
-work, all these package are easily installable in a few click trought the packages
-manager. SliTaz also provide a simple way to install the famous and powerfull
-OpenOffice suite, just search OpenOffice in the package manager, double click
-on: get-OpenOffice3 and install the script with the <code>Auto exec</code> option
-enable. 
+The SliTaz packages database provides some lightweight office applications.
+All of these packages are easily installable in a few clicks through the packages
+manager. SliTaz also provides a simple way to install the famous and powerful
+OpenOffice suite: just search OpenOffice in the packages manager, double click
+on "get-OpenOffice3" and install the script with the <code>Auto exec</code> option
+enabled. 
 </p>
 <p>
-To have a light office suite: Abiword as Word processor, Gnumeric as 
+To have a lightwight office suite; use: Abiword as Word processor, Gnumeric as 
 Spreadsheet and Homebank for Bank Accounting.
 </p>
 
@@ -105,17 +105,17 @@ Spreadsheet and Homebank for Bank Accounting.
 <h3>System information</h3>
 <p>
 You can get information on your system by clicking on "System information"
-in the System Tools menu, then clicking "Summary". Clicking on the other 
-options on the side brings you more information, and doing the benchmarks
-give you an idea on how fast your computer is. To have a list an control
-of all curent process you can use the "Task Manager".
+in the System Tools menu, then "Summary". Clicking on the other 
+options on the side brings you more information, and using the benchmarks
+gives you an idea on how fast your computer is. To have a list and control
+of all your current processes you can use the "Task Manager".
 </p>
 
 <a name="root"></a>
 <h3>Becoming Root</h3>
 <p>
-By default, Slitaz doesn't have its desktop running as root administrator,
-and it asks for a root password (default <code>root</code>) for any dangerous work.
+By default, Slitaz doesn't have its desktop running as root administrator:
+it asks for a root password (default <code>root</code>) for any dangerous work.
 Therefore, it is safer and more secure. To become root in an xterm, simply 
 type <code>su</code>, and enter the root password.
 </p>
@@ -123,16 +123,15 @@ type <code>su</code>, and enter the root password.
 <a name="root"></a>
 <h3>Installation</h3>
 <p>
-SliTaz can be installed to hard disk or on a USN mass storage device using the
-"SliTaz Installer" from "System Tools" menu, the installer make a full HD install.
-SliTaz dont work in memory (RAM) anymore like in Live or Frugal mode and 
+SliTaz can be installed to a hard disk or on an USB mass storage device using the
+"SliTaz Installer" from the "System Tools" menu. The installer makes a full HD install.
+SliTaz wont work in memory (RAM) anymore like in Live or Frugal mode and 
 everything is persistant.
 </p>
 <p>
-To generate a LiveUSB system you can use "Tazusb LiveUSB Tool" from "System Tools"
-or <code>tazusb</code> from the command line. More information can be found on SliTaz
-Handbook: <a href="http://www.slitaz.org/en/doc/handbook/liveusb.html"
-	>LiveUSB media</a>
+To generate a LiveUSB system you can use "Tazusb LiveUSB Tool" from the "System Tools"
+menu or <code>tazusb</code> from the command line. More information can be found in the SliTaz
+Handbook: <a href="http://www.slitaz.org/en/doc/handbook/liveusb.html">LiveUSB media</a>
 </p>
 
 <!-- End of content -->
