--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -126,7 +126,7 @@ type <code>su</code>, and enter the root password.
 SliTaz can be installed to a hard disk or on an USB mass storage device using the
 "SliTaz Installer" from the "System Tools" menu. The installer makes a full HD install.
 SliTaz wont work in memory (RAM) anymore like in Live or Frugal mode and 
-everything is persistant.
+everything is persistent.
 </p>
 <p>
 To generate a LiveUSB system you can use "Tazusb LiveUSB Tool" from the "System Tools"
