--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -97,7 +97,7 @@ on "get-OpenOffice3" and install the script with the <code>Auto exec</code> opti
 enabled. 
 </p>
 <p>
-To have a lightwight office suite; use: Abiword as Word processor, Gnumeric as 
+To have a lightweight office suite; use: Abiword as Word processor, Gnumeric as 
 Spreadsheet and Homebank for Bank Accounting.
 </p>
 
@@ -125,7 +125,7 @@ type <code>su</code>, and enter the root password.
 <p>
 SliTaz can be installed to a hard disk or on an USB mass storage device using the
 "SliTaz Installer" from the "System Tools" menu. The installer makes a full HD install.
-SliTaz wont work in memory (RAM) anymore like in Live or Frugal mode and 
+SliTaz won't work in memory (RAM) anymore like in Live or Frugal mode and 
 everything is persistent.
 </p>
 <p>
