--- a/slitaz/template.html
+++ b/slitaz/template.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
 	<meta name="description" content="slitaz doc system releases notes information cooking" />
 	<meta name="expires" content="never" />
-	<meta name="modified" content="2009-03-25 22:30:00" />
+	<meta name="modified" content="2010-01-04 22:40:00" />
 	<meta name="publisher" content="www.slitaz.org" />
 	<meta name="author" content="Christophe Lincoln"/>
 	<link rel="shortcut icon" href="favicon.ico" />
@@ -16,12 +16,15 @@
 
 <!-- Header and quick navigation -->
 <div id="header">
-<div align="right" id="quicknav">
-    <a name="top"></a>
-	<a href="index.html">Index of /usr/share/doc/slitaz</a> |
-	<a href="http://www.slitaz.org/doc/">www.slitaz.org/doc/</a>
-</div>
 <h1><font color="#3E1220">SliTaz - System doc</font></h1>
+</div>
+
+<div id="quicknav">
+	SliTaz:
+	<a href="http://www.slitaz.org/">Website</a>
+	<a href="http://forum.slitaz.org/">Forum</a>
+	<a href="http://wiki.slitaz.org/">Wiki</a>
+	<a href="http://labs.slitaz.org/">Labs</a>
 </div>
 
 <!-- Content. -->
@@ -34,23 +37,25 @@
 CONTENT
 </p>
 
-
 <!-- End of content -->
 </div>
 
 <!-- Footer. -->
 <div id="footer">
-	<div class="footer-right"></div>
-	<a href="#top">Haut de la page</a> | 
-	<a href="index.html">Index of /usr/share/doc/slitaz</a>
+	<a href="#top">Top of the page</a> - Languages:
+	<a href="index.de.html">de</a> |
+	<a href="index.en.html">en</a> |
+	<a href="index.fr.html">fr</a> |
+	<a href="index.hu.html">hu</a> |
+	<a href="index.pt.html">pt</a>
 </div>
 
 <div id="copy">
-	Copyright &copy; 2009 <a href="http://www.slitaz.org/">SliTaz</a> -
+	Copyright &copy; 2010 <a href="http://www.slitaz.org/">SliTaz</a> -
 	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
-	Documentation publiées sous
+	Documentation uder
 	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
-	et codée en <a href="http://validator.w3.org/">xHTML 1.0 valide</a>.
+	and valid <a href="http://validator.w3.org/">xHTML 1.0</a>.
 </div>
 
 </body>
