--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -61,7 +61,7 @@ community <a href="http://forum.slitaz.org/#idx2">Forum</a>.
 <h3>Network connections</h3>
 <p>
 Click on the "Network Status Monitor" at the bottom right of the screen, 
-"Configure" and then the network manager (netbox) should come up. You can 
+"Configure" and then the network manager (netbox) will come up. You can 
 go to the "DHCP" tab and click "Start", and Slitaz will send a DHCP request 
 to the local router. You may also setup a static IP, PPPoE, PPP, VPN and 
 more using their respective tabs. To configure a wireless connection you 
@@ -82,8 +82,9 @@ at the bottom left of the screen. To have a list of command line tools, you
 can open a terminal and double press on the tabulation button. And to have
 a list of all installed packages you can use the package manager user interface
 using the panel icon or from the "System Tools" menu. To install any new packages
-you must have a network connection, the DVD of packages or an USB 
-storage device with downloaded packages from another machine.
+you must have a network connection, the DVD of packages or an USB storage device 
+with downloaded packages from another machine. Naturally all packages management
+can also be done from the command line and <code>tazpkg</code>.
 </p>
 
 <a name="office"></a>
@@ -99,6 +100,22 @@ enabled.
 <p>
 To have a lightweight office suite; use: Abiword as Word processor, Gnumeric as 
 Spreadsheet and Homebank for Bank Accounting.
+</p>
+
+<a name="multimedia"></a>
+<h3>Multimedia</h3>
+<p>
+Most SliTaz flavors include a wide range of sound card drivers, a volume
+mixer and a light audio player to easily listen to MP3 or OGG files. Sound
+card is autodetected at boot time and audio support should work out-of-the-box
+on many system. If you manually add a new user and can't listen to audio, please
+check if the user belong to the <code>audio</code> group, for other trouble please
+look into the full documentation and use the forum for more help.
+</p>
+<p>
+Videos can be watched by installing one single package or using a dedicated
+LiveCD or LiveUSB system. SliTaz team have packaged the best video player 
+available uder GNU/Linux: <code>mplayer</code> <code>xine-ui</code> <code>vlc</code>
 </p>
 
 <a name="info"></a>
@@ -120,7 +137,7 @@ Therefore, it is safer and more secure. To become root in an xterm, simply
 type <code>su</code>, and enter the root password.
 </p>
 
-<a name="root"></a>
+<a name="install"></a>
 <h3>Installation</h3>
 <p>
 SliTaz can be installed to a hard disk or on an USB mass storage device using the
