--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -83,7 +83,7 @@ can open a terminal and double press on the tabulation button. And to have
 a list of all installed packages you can use the package manager user interface
 using the panel icon or from the "System Tools" menu. To install any new packages
 you must have a network connection, the DVD of packages or an USB storage device 
-with downloaded packages from another machine. Naturally all packages management
+with downloaded packages from another machine. Naturally any package management
 can also be done from the command line and <code>tazpkg</code>.
 </p>
 
@@ -106,16 +106,16 @@ Spreadsheet and Homebank for Bank Accounting.
 <h3>Multimedia</h3>
 <p>
 Most SliTaz flavors include a wide range of sound card drivers, a volume
-mixer and a light audio player to easily listen to MP3 or OGG files. Sound
-card is autodetected at boot time and audio support should work out-of-the-box
-on many system. If you manually add a new user and can't listen to audio, please
-check if the user belong to the <code>audio</code> group, for other trouble please
+mixer and a light audio player to easily listen to any MP3 or OGG files. The Sound
+card is autodetected at boot time and audio support works out-of-the-box
+on many systems. If you manually add a new user and can't listen to audio, please
+check that the user belongs to the <code>audio</code> group. For any other trouble please
 look into the full documentation and use the forum for more help.
 </p>
 <p>
 Videos can be watched by installing one single package or using a dedicated
-LiveCD or LiveUSB system. SliTaz team have packaged the best video player 
-available uder GNU/Linux: <code>mplayer</code> <code>xine-ui</code> <code>vlc</code>
+LiveCD or LiveUSB system. The SliTaz team have packaged some of the best video players 
+available under GNU/Linux: <code>mplayer</code>, <code>xine-ui</code> and <code>vlc</code>
 </p>
 
 <a name="info"></a>
