Update quicknav links

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -24,7 +24,8 @@
 	SliTaz:
 	<a href="http://www.slitaz.org/">Website</a>
 	<a href="http://forum.slitaz.org/">Forum</a>
-	<a href="http://wiki.slitaz.org/">Wiki</a>
+	<a href="http://doc.slitaz.org/">Documentation</a>
+	<a href="http://pkgs.slitaz.org/">Packages</a>
 	<a href="http://labs.slitaz.org/">Labs</a>
 </div>
 
@@ -34,11 +35,11 @@
 <h2><font color="#DF8F06">Documentation (en)</font></h2>
 
 <p>
-The Cooking version doesn't provide any Release Notes, major changes are announced
-on the web site and the <a href="http://labs.slitaz.org/">Labs</a> provide
-fresh news about the project's activity. Like the stable version, you will 
-find <a href="http://www.slitaz.org/en/doc/">documentation</a> on the web 
-site and support on the community <a href="http://forum.slitaz.org/">forum</a>.
+The Cooking version doesn't provide any Release Notes, major changes are
+announced on the web site and the <a href="http://labs.slitaz.org/">Labs</a>
+provide fresh news about the project's activity. Like the stable version, you
+will find <a href="http://doc.slitaz.org/">documentation</a> on the wiki site
+and support on the community <a href="http://forum.slitaz.org/">forum</a>.
 </p>
 
 <!--
