--- a/slitaz/index.hu.html
+++ b/slitaz/index.hu.html
@@ -15,14 +15,15 @@
 <body bgcolor="#ffffff">
 <!-- Header and quick navigation -->
 <div id="header">
-<h1><font color="#3e1220">SliTaz - System doc</font></h1>
+	<h1><font color="#3e1220">SliTaz - System doc</font></h1>
 </div>
 
 <div id="quicknav">
 	SliTaz:
 	<a href="http://www.slitaz.org/">Website</a>
 	<a href="http://forum.slitaz.org/">Forum</a>
-	<a href="http://wiki.slitaz.org/">Wiki</a>
+	<a href="http://doc.slitaz.org/">Documentation</a>
+	<a href="http://pkgs.slitaz.org/">Packages</a>
 	<a href="http://labs.slitaz.org/">Labs</a>
 </div>
 
@@ -31,9 +32,9 @@
 
 <h2><font color="#df8f06">Documentation (hu)</font></h2>
 
-<h3><font color="#6c0023">Megjegyz&eacute;s a kiad&aacute;shoz<br>
-</font></h3>
-<p>A SliTaz GNU/Linux stabil kiad&aacute;sa a rendszerre
+<h3><font color="#6c0023">Megjegyz&eacute;s a kiad&aacute;shoz</font></h3>
+<p>
+A SliTaz GNU/Linux stabil kiad&aacute;sa a rendszerre
 telep&iacute;tett projekt-eszk&ouml;z&ouml;kkel,
 le&iacute;r&aacute;sokkal &eacute;s Kiad&aacute;si
 t&aacute;j&eacute;koztat&oacute;val jelent meg. A
@@ -44,13 +45,15 @@ k&eacute;rj&uuml;k l&aacute;togassa meg a <a
  href="http://www.slitaz.org/">projekt oldalt</a> . A rendszer
 be&aacute;ll&iacute;t&aacute;s&aacute;hoz &eacute;s
 haszn&aacute;lat&aacute;hoz olvassa el a&nbsp; <a
- href="http://www.slitaz.org/hu/doc/handbook/">K&eacute;zik&ouml;nyvet</a>.
+ href="http://www.slitaz.org/en/doc/handbook/">K&eacute;zik&ouml;nyvet</a>.
 A k&ouml;z&ouml;ss&eacute;gr&#337;l a
-<a href="http://wiki.slitaz.org/">SliTaz Wiki</a>&nbsp; oldalon
+<a href="http://doc.slitaz.org/">SliTaz Doc</a>&nbsp; oldalon
 tal&aacute;l dokomentumokat. T&aacute;mogat&aacute;st a Slitaz
-k&ouml;z&ouml;ss&eacute;gi <a href="http://forum.slitaz.org/#idx2">F&oacute;rumon</a>
-kereszt&uuml;l kaphat. </p>
-<p>A Cooking verzi&oacute;hoz nincs t&aacute;j&eacute;koztat&oacute;, a
+k&ouml;z&ouml;ss&eacute;gi <a href="http://forum.slitaz.org/">F&oacute;rumon</a>
+kereszt&uuml;l kaphat.
+</p>
+<p>
+A Cooking verzi&oacute;hoz nincs t&aacute;j&eacute;koztat&oacute;, a
 v&aacute;ltoztat&aacute;sokat k&ouml;zz&eacute;tessz&uuml;k a honlapon,
 &eacute;s a <a href="http://labs.slitaz.org/">Labs</a>
 szolg&aacute;ltat &uacute;j inform&aacute;ci&oacute;kat a projektbeli
