--- a/slitaz/template.html
+++ b/slitaz/template.html
@@ -23,7 +23,8 @@
 	SliTaz:
 	<a href="http://www.slitaz.org/">Website</a>
 	<a href="http://forum.slitaz.org/">Forum</a>
-	<a href="http://wiki.slitaz.org/">Wiki</a>
+	<a href="http://doc.slitaz.org/">Documentation</a>
+	<a href="http://pkgs.slitaz.org/">Packages</a>
 	<a href="http://labs.slitaz.org/">Labs</a>
 </div>
 
