en: edit index.html

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -61,11 +61,11 @@ community <a href="http://forum.slitaz.org/#idx2">Forum</a>.
 <a name="network"></a>
 <h3>Network connections</h3>
 <p>
-Click on the "Network Status Monitor" at the bottom right of the screen, 
-"Configure" and then the network manager (netbox) will come up. You can 
+Click on the "Network Status Monitor" at the bottom right of the screen, then
+"Configure" and the network manager (netbox) will come up. You can then
 go to the "DHCP" tab and click "Start", and Slitaz will send a DHCP request 
 to the local router. You may also setup a static IP, PPPoE, PPP, VPN and 
-more using their respective tabs. To configure a wireless connection you 
+more options using their respective tabs. To configure a wireless connection you 
 can use SliTaz wifibox by clicking "Wireless Manager" in the Network Manager 
 or by using the "System Tools" menu entry -> "Wireless networks connections".
 </p>
@@ -81,10 +81,10 @@ More detailed information can be found in the Handbook:
 To have a list of all graphical applications you can use the SliTaz menu button 
 at the bottom left of the screen. To have a list of command line tools, you
 can open a terminal and double press on the tabulation button. And to have
-a list of all installed packages you can use the package manager user interface
-using the panel icon or from the "System Tools" menu. To install any new packages
+a list of all installed packages you can launch the package manager user interface
+from the Lxpanel icon or by using the "System Tools" menu entry. To install any new packages
 you must have a network connection, the DVD of packages or an USB storage device 
-with downloaded packages from another machine. Naturally any package management
+with downloaded packages. Naturally any package management
 can also be done from the command line and <code>tazpkg</code>.
 </p>
 
@@ -93,8 +93,8 @@ can also be done from the command line and <code>tazpkg</code>.
 <p>
 The SliTaz packages database provides some lightweight office applications.
 All of these packages are easily installable in a few clicks through the packages
-manager. SliTaz also provides a simple way to install the famous and powerful
-OpenOffice suite: just search OpenOffice in the packages manager, double click
+manager. SliTaz also provides a simple way to install the powerful
+OpenOffice suite: just search for "OpenOffice" in the packages manager, double click
 on "get-OpenOffice3" and install the script with the <code>Auto exec</code> option
 enabled. 
 </p>
@@ -111,7 +111,7 @@ mixer and a light audio player to easily listen to any MP3 or OGG files. The Sou
 card is autodetected at boot time and audio support works out-of-the-box
 on many systems. If you manually add a new user and can't listen to audio, please
 check that the user belongs to the <code>audio</code> group. For any other trouble please
-look into the full documentation and use the forum for more help.
+look into the full documentation and/or use the forum.
 </p>
 <p>
 Videos can be watched by installing one single package or using a dedicated
@@ -123,8 +123,8 @@ available under GNU/Linux: <code>mplayer</code>, <code>xine-ui</code> and <code>
 <h3>System information</h3>
 <p>
 You can get information on your system by clicking on "System information"
-in the System Tools menu, then "Summary". Clicking on the other 
-options on the side brings you more information, and using the benchmarks
+in the System Tools menu, then "Summary". Clicking on any other 
+options brings you more information, and using the benchmarks
 gives you an idea on how fast your computer is. To have a list and control
 of all your current processes you can use the "Task Manager".
 </p>
@@ -133,7 +133,7 @@ of all your current processes you can use the "Task Manager".
 <h3>Becoming Root</h3>
 <p>
 By default, Slitaz doesn't have its desktop running as root administrator:
-it asks for a root password (default <code>root</code>) for any dangerous work.
+it asks for a root password (default <code>root</code>) for any superuser work.
 Therefore, it is safer and more secure. To become root in an xterm, simply 
 type <code>su</code>, and enter the root password.
 </p>
@@ -147,7 +147,7 @@ SliTaz won't work in memory (RAM) anymore like in Live or Frugal mode and
 everything is persistent.
 </p>
 <p>
-To generate a LiveUSB system you can use "Tazusb LiveUSB Tool" from the "System Tools"
+To generate a LiveUSB system you can use the "Tazusb LiveUSB Tool" from the "System Tools"
 menu or <code>tazusb</code> from the command line. More information can be found in the SliTaz
 Handbook: <a href="http://www.slitaz.org/en/doc/handbook/liveusb.html">LiveUSB media</a>
 </p>
