index.html: fix typo

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -123,8 +123,8 @@ available under GNU/Linux: <code>mplayer</code>, <code>xine-ui</code> and <code>
 <h3>System information</h3>
 <p>
 You can get information on your system by clicking on "System information"
-in the System Tools menu, then "Summary". Clicking on any other 
-options brings you more information, and using the benchmarks
+in the System Tools menu, then "Summary". Clicking on the other 
+buttons brings you more information, and using the benchmarks
 gives you an idea on how fast your computer is. To have a list and control
 of all your current processes you can use the "Task Manager".
 </p>
